--- a/styles/css/vtex.product-list.css
+++ b/styles/css/vtex.product-list.css
@@ -19,7 +19,7 @@
     font-weight: 700;
     margin: 0;
     width: 100%;
-    display: flex;
+    display: block;
     justify-content: flex-end;
 }
 .productBrandName {
@@ -38,8 +38,46 @@
     height: 24px;
     margin-top: 0;
     transition: all 40ms;
-    margin-right: 5px;
 }
 .minicartSummary--rowProduct {
     padding: 0;
+}
+.unitPriceContainer {
+    display: none;
+}
+.productImageContainer {
+    width: 65px !important;
+}
+.removeButtonContainer {
+    transition: 400ms all;
+    border-radius: 5px;
+}
+.removeButtonContainer:hover {
+    background: #F1F1F1;
+}
+@media (max-width: 600px) {
+    .productImageContainer {
+        width: 50px !important;
+    }
+    .inputContainer {
+        width: 20px;
+        margin: 0 4px;
+        font-size: 15px;
+        padding: 0 !important;
+    }
+    .productPriceContainer {
+        display: block;
+    }
+    .price {
+        font-size: 14px;
+    }
+    .productPriceCurrency  .currencyContainer{
+        font-size: 11px;
+    }
+    .productName {
+        font-size: 13px;
+    }
+    .quantitySelectorButton--cantidadBox {
+        padding: 5px;
+    }
 }
