--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -75,6 +75,47 @@
   font-weight: bold;
 }
 
+/* 404 estilso */
+.link--category-404-item{
+  text-decoration: none;
+  color: #808080;
+}
+.paragraph--category-404-item{
+  padding: 7px 40px;
+  border: 1px solid #E7EEF1;
+  border-radius: 3px;
+  text-align: center;
+  transition: 400ms all;
+}
+:global(.vtex-slider-layout-0-x-sliderLayoutContainer--categoryCarousel-404){
+  padding: 0 100px;
+}
+.container--category-404-item {
+  width: 100%;
+  margin: 0 4px;
+}
+:global(.vtex-store-components-3-x-infoCardContainer--info-card-404 ){
+  margin-bottom: 30px;
+}
+:global(.vtex-store-components-3-x-infoCardCallActionContainer--info-card-404 ){
+  display: none;
+}
+:global(.vtex-store-components-3-x-infoCardContainer--info-card-404 ){
+  padding: 60px 0;
+}
+:global(.vtex-store-components-3-x-infoCardSubhead--info-card-404 ){
+  color: white;
+}
+.wrapper--category-404-item{
+  width: 100%;
+}
+.paragraph--category-404-item:hover{
+  background: #27AFE5;
+  border: 0; 
+}
+.paragraph--category-404-item:hover .link--category-404-item{
+  color: white;
+}
 .paragraph--tituloSlideCategory{
   font-weight: bold;
   font-size: 35px;
@@ -105,10 +146,15 @@
   background: #343434;
   text-decoration: none;
   color: white;
-  font-size: 20px;
+  font-size: 16px;
   border-radius: 5px;
   margin-top: 28px;
   display: block;
+  transition: 400ms all;
+}
+.link--infoProductContent:hover{
+  background: #27AFE5;
+  color: white;
 }
 .wrapper--tituloVitrinaDestacada .paragraph{
   margin-bottom: 0px;
@@ -130,10 +176,11 @@
   padding: 0 55px;
   font-weight: bold;
   margin: 10px 0;
+  color: #27AFE5;
 }
 .container--tituloFiltro::before {
   content: "";
-  background: url(https://cutis.vteximg.com.br/arquivos/filtrosazul.png)no-repeat;
+  background: url(https://cutis.vteximg.com.br/arquivos/filtrosazul.png) no-repeat;
   background-size: 100%;
   font-size: 10px;
   display: block;
@@ -158,6 +205,19 @@
 }
 .paragraph--tituloOrderplaced{
   margin-top: 70px;
+}
+.wrapper--link-politicas .link{
+  color: #808080;
+  font-size: 14px;
+  text-decoration: none;
+}
+.wrapper--link-politicas .link:hover{
+  color: black;
+  font-weight: bold;
+}
+.wrapper--link-politicas .paragraph{
+  margin: 5px;
+  margin-left: 30px;
 }
 @media only screen and (min-width: 640px) {
   .container--question .strong {
@@ -215,12 +275,185 @@
   color: #27AFE5;
   font-weight: bold;
   margin: 0;
+  font-size: 14px;
+}
+.wrapper--tituloFaqs .paragraph--contenidofaqs{
+  color: #27AFE5;
+  font-weight: bold;
+}
+.wrapper--contenidofaqs .paragraph--tituloFaqs{
+  color: #3f3f40;
+  font-weight: 400;
+}
+.paragraph--header-top {
+  padding: 0 !important;
+
+}
+.link--link{
+  color: black;
+  font-size: 11px;
+  font-weight: bold;
+}
+.link--link:hover{
+  color: #27AFE5;
+}
+.paragraph--header-top{
+  color: black;
+  font-size: 11px; 
+  margin: 8px 0;
+}
+.container--header-top {
+  justify-content: end;
+}
+.container--header-top.container--headertopLink {
+  justify-content: flex-start;
+  margin-left: 5px;
+}
+.link--categoriasTitulo{
+  color: #808080;
+  text-decoration: none;
+}
+:global(.vtex-flex-layout-0-x-flexCol--imagenCategoriaColumn):hover .link--categoriasTitulo{
+  color: #27AFE5;
+  font-weight: bold;
+}
+.wrapper--decorativo::before{
+  content: "";
+  display: block;
+  background: url(/arquivos/izquierdas.png) no-repeat;
+  background-size: 100%;
+  width: 120px;
+  height: 10px;
+  margin-right: 10px;
+}
+.wrapper--decorativo::after{
+  content: "";
+  display: block;
+  background: url(/arquivos/derechas.png) no-repeat;
+  background-size: 100%;
+  width: 120px;
+  height: 10px;
+  margin-left: 10px;
+}
+.wrapper--decorativo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container--categoriasTabbers {
+  justify-content: center;
+}
+.paragraph--categoriasTabbers{
+  margin: 8px;
+}
+.link--categoriasTabbers{
+  color: #27AFE5;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 8px 130px;
+  border: 1px solid #27AFE5;
+  border-radius: 5px;
+  transition: 400ms all;
+}
+.link--categoriasTabbers:hover{
+  background: #27AFE5;
+  color: white;
+}
+.container--marcasTittles {
+  border-top: 1px solid #E7EEF1;
+  margin: 0 100px;
+}
+.wrapper--infoProductContent{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+:global(.vtex-flex-layout-0-x-flexColChild--infoProductColumn):nth-child(2n) .wrapper--contenidoSlideCategory::before{
+  content: "";
+  background: url(/arquivos/Paso2New.png) no-repeat;
+  background-size: 100%;
+  width: 37px;
+  height: 38px;
+  margin-right: 10px;
+}
+:global(.vtex-flex-layout-0-x-flexColChild--infoProductColumn):nth-child(3n) .wrapper--contenidoSlideCategory::before{
+  content: "";
+  background: url(/arquivos/Paso1New.png) no-repeat;
+  background-size: 100%;
+  width: 37px;
+  height: 38px;
+  margin-right: 10px;
+}
+:global(.vtex-flex-layout-0-x-flexColChild--infoProductColumn):nth-child(4n) .wrapper--contenidoSlideCategory::before{
+  content: "";
+  background: url(/arquivos/Paso3New.png) no-repeat;
+  background-size: 100%;
+  width: 37px;
+  height: 38px;
+  margin-right: 10px;
+}
+.link--footer{
+  color: #808080;
+  font-size: 12px;
+  text-decoration: none;
+}
+.link--footer:hover{
+  color: #27AFE5;
+}
+.paragraph--footer{
+  margin: 2px 0;
+}
+.paragraph--footer{
+  font-size: 12px;
+  color: #D3D3D3;
+}
+.container--tittleSlider {
+  justify-content: center;
+}
+.link--tittleSlider{
+  color: #27AFE5;
+  font-weight: bold;
+  text-decoration: none;
+}
+.container--button-cards {
+  justify-content: center;
+}
+.link--button-cards{
+  text-decoration: none;
+  color: white;
+  background: #27AFE5;
+  border-radius: 5px;
+  padding: 10px 60px;
+  transition: 400ms all;
+}
+.link--button-cards:hover{
+  background: #1B7BA1;
+}
+.paragraph--contenidofaqs{
+  color: #808080;
+  font-size: 12px;
+}
+.paragraph--cierreBuscador{
+  color: white;
+}
+.paragraph--infoProductContent{
+  margin: 0;
+}
+.paragraph--vitrinaDestacada{
+  margin: 0;
+}
+.container--tituloSlideCategory {
+  margin-bottom: 20px;
+}
+.paragraph--contenidoSlideCategory {
+  margin-bottom: 20px;
 }
 @media (max-width: 600px) {
   .container--titulosFooter {
     justify-content: center;
     font-size: 20px;
     font-weight: bold;
+    margin-bottom: 20px;
   }
   .paragraph--titulosFooter{
     margin: 0;
@@ -256,10 +489,14 @@
   .paragraph--SubMenuItems {
     margin-top: 0;
     text-align: center;
+    color: rgb(128, 128, 128);
+  }
+  :global(.vtex-disclosure-layout-1-x-content--menuOfertas--visible) .paragraph--SubMenuItems {
+   font-size: 10px;
   }
   .wrapper--tituloVitrinaDestacada .paragraph{
     position: absolute;
-    top: -119px;
+    top: -100px;
     font-size: 20px;
     width: 100%;
     margin-left: 8px;
@@ -274,5 +511,81 @@
   .heading--faqsTitulo{
     padding: 0 10px;
     font-size: 34px;
+  }
+  .wrapper--decorativo::before {
+    width: 80px;
+    height: 10px;
+    margin-right: 3px;
+  }
+  .wrapper--decorativo::after {
+    width: 70px;
+    height: 10px;
+    margin-left: 3px;
+  }
+  .heading--shelfTitle {
+    font-size: 22px;
+  }
+  .container--marcasTittles {
+    margin: 0;
+  }
+  .paragraph--tituloSlideCategory{
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .paragraph--tituloCheckout{
+    font-size: 13px;
+    padding: 0 !important;
+    margin: 5px 0;
+  }
+  .container--tituloCheckout {
+    justify-content: center;
+  }
+  .paragraph--contenidoSlideCategory{
+    font-size: 11px;
+    margin: 0;
+    margin-left: 5px;
+  }
+  .link--categoriasTabbers {
+    padding: 8px 86px;
+  }
+  .container--tituloSlideCategory {
+    margin-bottom: 0px;
+  }
+  :global(.vtex-flex-layout-0-x-flexColChild--infoProductColumn):nth-child(2n) .wrapper--contenidoSlideCategory::before{
+    width: 87px;
+    height: 38px;
+  }
+  :global(.vtex-flex-layout-0-x-flexColChild--infoProductColumn):nth-child(3n) .wrapper--contenidoSlideCategory::before{
+    width: 92px;
+    height: 38px;
+  }
+  :global(.vtex-flex-layout-0-x-flexColChild--infoProductColumn):nth-child(4n) .wrapper--contenidoSlideCategory::before{
+    width: 87px;
+    height: 38px;
+  }
+  .container--derechosReservados {
+    background: #F7F9FB;
+  }
+  .paragraph--derechosReservados{
+    font-size: 12px;
+    color: #808080;
+  }
+  .container--item-menu-fixed {
+    justify-content: center;
+  }
+  .link--item-menu-fixed{
+    text-decoration: none;
+    color: black;
+    font-size: 12px;
+  }
+  .link--item-menu-fixed.link--ofertas{
+    color: #27AFE5;
+  }
+  .link--item-menu-fixed.link--wp{
+    color: #3EC350;
+  }
+  .paragraph--item-menu-fixed{
+    margin: 3px 0;
+    line-height: 16px;
   }
 }
