--- a/styles/css/product-specification-table/vtex.flex-layout.css
+++ b/styles/css/product-specification-table/vtex.flex-layout.css
@@ -20,7 +20,7 @@
 }
 .flexRow--product-reviews{
   padding: 0 100px;
-  margin: 40px 0;
+  margin: 10px 0 40px 0;
 }
 .flexCol--column1 :global(.vtex-reviews-and-ratings-3-x-reviewsOrderBy){
   display: none;
