--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -36,6 +36,7 @@
 
 .imageContainer {
   text-align: center;
+  width: 100%;
 }
 
 .image {
@@ -44,15 +45,16 @@
 .nameWrapper {
   
   text-align: left;
-  min-height: 38px;
+  min-height: 37px;
   max-height: 38px;
 
 }
 
 .brandName {
   font-size: 13px;
-  letter-spacing: 1px;
+  letter-spacing: 0px;
   font-weight: 400;
+  line-height: 2px;
 }
 
 .productBrandContainer{
@@ -60,7 +62,8 @@
 }
 
 .productBrandName {
-  font-size: 13px;
+  font-size: 11px;
+  text-transform: lowercase;
   margin-bottom: 7px;
   color: #9c9c9c;
   display: block;
@@ -116,7 +119,8 @@
   display: none;
 }
 .price_listPrice .currencyContainer{
-  font-size: 11.59px
+  font-size: 11.59px;
+  font-weight: 100;
 }
 .containerNormal {
   max-width: 100% !important;
@@ -128,12 +132,89 @@
   padding-bottom: 0;
   position: relative;
 }
+.element:hover .hoverImage{
+  display: block;
+  z-index: 1;
+  max-height: 100%;
+  width: 90%;
+  margin: 0 14px;
+}
+:global(.vtex-search-result-3-x-gallery--list) .imageNormal {
+  max-height: 23.56rem;
+  max-width: 88%;
+}
 .productBrandName{
   padding-top: 10px;
   border-top: 1px solid #D3D3D3;
 }
+.containerNormal {
+  background: white;
+  padding:0 5px 10px 5px;
+  transition: 400ms all;
+}
+/* vitrina del carrito */
+.container--vitrineCarrito {
+  padding: 0 20px;
+}
+.container--vitrineCarrito .productBrandName{
+  border: 0;
+}
+.container--vitrineCarrito {
+  min-height: 136px !important;
+}
 @media (max-width: 600px) {
+  :global(.vtex-wish-list-1-x-wishlistIconContainer){
+    right: -2px;
+  }
   .element {
     background: white;
+  }
+  .image {
+    border-radius: 0.25rem;
+    max-height: 100% !important;
+  }
+  .price_listPrice .currencyContainer{
+    font-size: 10px;
+  }
+  .nameWrapper {
+    text-align: left;
+    min-height: 39px;
+    max-height: 38px;
+  }
+  .containerNormal {
+    padding: 0 0px 10px 0px;
+  }
+  /* vitrina grande estilos */
+  :global(.vtex-flex-layout-0-x-flexRow--preciosVitrine2) :global(.vtex-store-components-3-x-container ){
+    padding: 0 2px;
+  }
+  :global(.vtex-shelf-1-x-container--mobileVitrinaTres) .imageContainer {
+    width: 86%;
+  }
+  :global(.vtex-shelf-1-x-container--mobileVitrinaTres) :global(.vtex-flex-layout-0-x-flexColChild--productInfo2) .currencyContainer {
+    font-size: 20px;
+  }
+  :global(.vtex-shelf-1-x-container--mobileVitrinaTres) :global(.vtex-flex-layout-0-x-flexColChild--productInfo2) .price_sellingPriceContainer {
+    margin-top: 2%;
+  }
+  :global(.vtex-shelf-1-x-container--mobileVitrinaTres) :global(.vtex-flex-layout-0-x-flexColChild--productInfo2) .price_listPrice .currencyContainer{
+    font-size: 13px;
+  }
+  :global(.vtex-shelf-1-x-container--mobileVitrinaTres) :global(.vtex-flex-layout-0-x-flexColChild--productInfo2) .price_listPriceContainer{
+    margin-top: 3.6%;
+  }
+  :global(.vtex-shelf-1-x-container--mobileVitrinaTres) :global(.vtex-flex-layout-0-x-flexColChild--productInfo2) :global(.vtex-button){
+    width: 24px;
+    height: 47px;
+  }
+  .clearLink--vitrineCarrito .nameWrapper{
+    text-align: left;
+    min-height: 18px;
+    max-height: 38px;
+  }
+  .element--vitrineCarrito {
+    background: white;
+    height: 87%;
+    border-radius: 5px;
   }
 }
