--- a/styles/css/vtex.stack-layout.css
+++ b/styles/css/vtex.stack-layout.css
@@ -14,30 +14,77 @@
 .stackItem--newFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="137"]{
   display: block;
   margin-top: 50px;
+  margin-left: -9px;
 }
 
 .stackItem--nocheDiaFlag{
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  padding: 94% 0 0 0;
 }
 .stackItem--nocheDiaFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection){
   display: none;
 }
 .stackItem--nocheDiaFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="139"]{
   display: block;
-  bottom: 0;
-  width: 20px;
-  top: 86%;
-  height: 20px;
+  width: 100%;
+  height: 28px;
+  left: 8px;
+  position: relative;
+}
+.stackItem--nocheDiaFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="138"]{
+  display: block;
+  width: 100%;
+  height: 28px;
+  left: 8px;
+  position: relative;
+}
+.stackItem--nocheDiaFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="141"]{
+  display: block;
+  width: 100%;
+  height: 28px;
+  left: 8px;
+  position: relative;
+}
+.stackItem--nocheDiaFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="142"]{
+  display: block;
+  width: 100%;
+  height: 28px;
+  left: 8px;
+  position: relative;
 }
 .stackItem--nocheDiaFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="140"]{
   display: block;
   top: 0!important;
   width: 20px;
-  top: 86%;
   height: 20px;
-  left: 8px;
+  left: 0px;
+  position: absolute;
 }
 .stackContainer--product {
   background:white;
+}
+:global(.vtex-flex-layout-0-x-flexRowContent--contenedorImagenes) :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="142"]{
+  display: none;
+}
+@media (max-width: 700px) {
+  :global(.vtex-flex-layout-0-x-flexRowContent--main-Product) :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="142"]{
+    display: none;
+  }
+  .stackItem--nocheDiaFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="140"]{
+    left: 0px;
+  }
+  .stackItem--newFlag :global(.vtex-product-highlights-2-x-productHighlightWrapper--collection)[data-highlight-id="137"]{
+    left: 0;
+    width: 100%;
+    margin-left: -1px;
+  }
+  .stackItem--newFlag{
+    width: 100%;
+  }
 }
